<resources>
    <string name="app_name">NanoMovies</string>
    <string name="popular_movies_list">Popular Movies</string>
    <string name="high_rated_movies_list">Highest Rated Movies</string>
    <string name="favorite_movies_list">My Favorite Movies</string>

    <string name="sort_menu">Sort By</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="my_favorites">My Favorites</string>

    <string name="user_rating_label">User Rating:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="overview_label">Overview:</string>
    <string name="popularity_label">Popularity Score:</string>
    <string name="favorite_label_add">+ Favorite</string>
    <string name="favorite_label_remove">- Favorite</string>

</resources>
