<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorAccent"
            >

            <TextView
                android:id="@+id/movieDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Guardians of the Galaxy Vol. 2"
                android:textColor="@android:color/white"
                android:textSize="30dp"
                android:gravity="center"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp"
            android:weightSum="2"
            >

            <ImageView
                android:id="@+id/movieDetailsImageView"
                android:contentDescription="movie poster"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/movieDetailsOverview"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="this is a sentence summary of the movie"
                android:gravity="center"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
                <TextView
                    android:id="@+id/movieDetailsRatingsLabel"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating_label"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    />

                <TextView
                    android:id="@+id/movieDetailsRatings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="6.8"

                    android:layout_toRightOf="@+id/movieDetailsRatingsLabel"
                    android:layout_alignBaseline="@+id/movieDetailsRatingsLabel"

                    />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
           <TextView
                android:id="@+id/movieDetailsPopularityLabel"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/popularity_label"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/movieDetailsPopularity"
                android:layout_toRightOf="@+id/movieDetailsPopularityLabel"
                android:layout_alignBaseline="@+id/movieDetailsPopularityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="111.02"

                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/movieDetailsReleaseDateLabel"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/movieDetailsReleaseDate"
                android:layout_toRightOf="@+id/movieDetailsReleaseDateLabel"
                android:layout_alignBaseline="@+id/movieDetailsReleaseDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2017-03-16"

                />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
