<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:nanomovie="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable name="movieInfo" type="annekenl.nanomovies2.utility.MovieItem"/>
    </data>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/colorAccent"
                >

                <TextView
                    android:id="@+id/movieDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Guardians of the Galaxy Vol. 2"
                    android:textColor="@android:color/white"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:text="@{movieInfo.title}"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:weightSum="2"
                >

                <ImageView
                    android:id="@+id/movieDetailsImageView"
                    android:contentDescription="movie poster"
                    android:layout_height="wrap_content"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    nanomovie:poster_path="@{movieInfo.poster_path}"
                    />

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movieDetailsOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        tools:text="this is a short summary of the movie"
                        android:padding="3dp"
                        android:text="@{movieInfo.overview}"
                        />
                </android.support.v4.widget.NestedScrollView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                            <TextView
                                android:id="@+id/movieDetailsRatingsLabel"
                                android:layout_width="115dp"
                                android:layout_height="wrap_content"
                                android:text="@string/user_rating_label"
                                android:textStyle="bold"
                                android:layout_margin="10dp"
                                />

                            <TextView
                                android:id="@+id/movieDetailsRatings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="6.8"
                                android:text="@{movieInfo.vote_average}"
                                android:layout_toRightOf="@+id/movieDetailsRatingsLabel"
                                android:layout_alignBaseline="@+id/movieDetailsRatingsLabel"

                                />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                       <TextView
                            android:id="@+id/movieDetailsPopularityLabel"
                            android:layout_width="115dp"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity_label"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />

                        <TextView
                            android:id="@+id/movieDetailsPopularity"
                            android:layout_toRightOf="@+id/movieDetailsPopularityLabel"
                            android:layout_alignBaseline="@+id/movieDetailsPopularityLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="111.02"
                            android:text="@{movieInfo.popularity}"
                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/movieDetailsReleaseDateLabel"
                            android:layout_width="115dp"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date_label"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />

                        <TextView
                            android:id="@+id/movieDetailsReleaseDate"
                            android:layout_toRightOf="@+id/movieDetailsReleaseDateLabel"
                            android:layout_alignBaseline="@+id/movieDetailsReleaseDateLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2017-03-16"
                            android:text="@{movieInfo.formattedDate}"
                            />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                        <Button
                            android:id="@+id/favButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center_horizontal"

                            android:text="@string/favorite_label_add"
                            android:background="@color/colorAccent"
                            android:textColor="@android:color/white"
                        />
                </LinearLayout>

        </LinearLayout> <!-- stats and button container -->

        <!-- trailers and reviews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
                <include layout="@layout/details_links_row"
                    android:id="@+id/movieDetailsTrailerChoices"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />

                <include layout="@layout/details_links_row"
                    android:id="@+id/movieDetailsReviewChoices"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />

        </LinearLayout>

        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:orientation="horizontal"
             android:background="@android:color/black"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="2dp" />

        </LinearLayout> <!-- overall container -->
 </ScrollView>
</layout>